<resources>
    <string name="app_name">Strigoi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Last open Spirit</string>
    <string name="strigoiBoxText">Strigoi:</string>
    <string name="strigoiInputBoxHint">1</string>
    <string name="spiritBoxText">Spirit:</string>
    <string name="spiritNumBoxHint">1</string>
    <string name="buttonPressWarning">Press the Dashboard button again.</string>
    <string name="new_content">Appended Content (Leave Blank if not needed)</string>
    <string name="dashboardRunBoxText">Get Spirit</string>
    <string name="post">Append</string>
    <string name="updateUserButtonText">Update Username</string>
    <string name="userNameInputBoxText">User Name</string>
    <string name="userNameInputBoxAccHint">Put your new username here.</string>
    <string name="go_to_user_fragment">Go to User Fragment</string>
    <string name="back">Back</string>
    <string name="editUserButtonText">Edit Your User Information</string>
    <string name="loading">Loading...</string>
    <string name="submit">Submit</string>
    <string name="editSpiritTextDefaultHint">Write your story here.</string>
    <string name="seriesTitleInputHint">Strigoi Name</string>
    <string name="seriesTitleLabelText">Series Title</string>
    <string name="seriesThumbnailURLHint">thumbnail URL</string>
    <string name="seriesThumbnailURLLabelText">Thumbnail Image URL</string>
</resources>