<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/seriesTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/seriesTitleInputHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/seriesTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seriesTitleLabelText"
        app:layout_constraintBottom_toBottomOf="@+id/seriesTitleInput"
        app:layout_constraintEnd_toStartOf="@+id/seriesTitleInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seriesTitleInput" />

    <EditText
        android:id="@+id/seriesThumbNailURLInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/seriesThumbnailURLHint"
        app:layout_constraintEnd_toEndOf="@+id/seriesTitleInput"
        app:layout_constraintStart_toStartOf="@+id/seriesTitleInput"
        app:layout_constraintTop_toBottomOf="@+id/seriesTitleInput"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/thumbnailURLInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seriesThumbnailURLLabelText"
        app:layout_constraintBottom_toBottomOf="@+id/seriesThumbNailURLInput"
        app:layout_constraintEnd_toStartOf="@+id/seriesThumbNailURLInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seriesThumbNailURLInput" />

    <TextView
        android:id="@+id/seriesCreationReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="To create a series, you must specify a name. There is also the option to add a thumbnail, by adding its url. (Leave it blank if you don't need it.)"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seriesThumbNailURLInput"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:onClick="createNewSeries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seriesCreationReminder" />

    <Button
        android:id="@+id/backButtonSeriesCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:onClick="goToHomeFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>